<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categories_title">Categories</string>
    <string name="products_title">Products</string>
    <string name="home_title">Home</string>
    <string name="basket_title">Orders</string>
    <string name="services_title">Services</string>
    <string name="your_orders_title">Your Orders</string>
    <string name="sign_out_title">Sign Out</string>
    <string name="profile_data">Profile </string>
    <string name="location">Delivery Locations</string>
    <string name="favoruites">Favourites</string>
    <string name="questionss">Questions and Ratings</string>
    <string name="about">About Shoghl Beet</string>
    <string name="sign_in">Sign In</string>
    <string name="follow_us_on">Follow us on</string>
    <string name="language_title">English</string>
    <string name="arabic_title">اللغة العربية</string>
    <string name="english_title">"English "</string>
    <string name="wallet_data">Pocket Money is </string>
    <string name="companytitle">All rights reserved to Home Made &#169;</string>
</resources>